created an endpoint to update a  claim  status